sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:8: error: not found: value minpos
	minpos=i;
        ^AlgSelectionSort:10: error: not found: value minpos
  		if(getValeur(j)<getValeur(minpos))
                                          ^AlgSelectionSort:11: error: not found: value minpos
  			minpos = j;
                        ^AlgSelectionSort:13: error: not found: value minpos
  			setValeur(i,getValeur(minpos));
                                              ^AlgSelectionSort:14: error: not found: value minpos
  			setValeur(minpos,temp);
                                  ^