sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {

var i: Int = 0;
var temp: Int = 0

for(i <- 0 to (getNombreValeurs()-2)){
	minpos=i;
	for(j <- i to (getNombreValeurs()-2))
  		if(getValeur(j)<getValeur(minpos))
  			minpos = j;
  			temp=getValeur(i);
  			setValeur(i,getValeur(minpos));
  			setValeur(minpos,temp);
  			
}

}
